...
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">


                <TextView
                    android:id="@+id/repositories"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.356"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
...
