<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ContributorFragment">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contributor_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contributor_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>